# cool-mint

./: .gitignore  CLAUDE.md  CPT_CATEGORIZATION_README.md  FIRECRAWL_EXPANSION_PLAN.md  LICENCE.txt  LICENSE  MARKET_EXPLORER_ARCHITECTURE.md  MARKET_EXPLORER_TODO.md  README.md  SETUP_GUIDE.md  pyproject.toml  pytest.ini  start-activity-selector.sh  successful_test_results.txt  test-activity-api.sh  test-complete-setup.sh  test_simple.py  todo.md
app/: .env.example  constants.py  createworkflow.sh  email_sync.py  langfuse_example.py  main.py  main_minimal.py  makemigration.sh  pyproject.toml  requirements.txt  start.sh  test_email_simple.py  test_email_workflow.py  test_relationships_api.py  test_simple.py  test_transfer_api.py
app/README/: EMAIL_SYNC_README.md
app/alembic/: env.py
app/api/: activities.py  bundles.py  claims.py  contacts.py  dependencies.py  email_actions.py  email_webhook.py  emails.py  endpoint.py  event_schema.py  llm.py  relationships.py  router.py
app/celery_worker/: config.py  tasks.py
app/cli/: README.md  __init__.py  structure_activities.py
app/config/: celery_config.py  config_auth.py  database_config.py  llm_config.py  settings.py
app/core/: base.py  langfuse_config.py  llm.py  model_config.py  parallel.py  parallelization.py  pipeline.py  router.py  schema.py  task.py  validate.py  workflow.py
app/database/: database_utils.py  encrypted.py  event.py  pgvector.py  repository.py  session.py
app/debug/: QUICK_START.md  README.md  db_inspector.py  docker_debug.sh  test_async_workflow.py  test_celery_basic.py  test_celery_docker.py  (+1 more)
(+584 files in other folders)
