[project]
name = "genai-launchpad"
version = "1.0.0"
description = "GenAI Launchpad by Datalumina"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "instructor>=1.7.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "redis>=5.2.1",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "ipython>=9.1.0",
]

[project.scripts]
createworkflow = "app.core.commands.init_workflow:main"

[tool.setuptools]
packages = ["app"]
